# SPS-EQ

./: CMakeLists.txt  README.md  main.cpp  sps_eq.cpp  sps_eq.hpp
temp/: main.cpp  sps_eq.cpp  sps_eq.hpp
